homework/5.kubernetes-network/redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-redmine
  namespace: gb4
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: my-redmine
  template:
    metadata:
      labels:
        app: my-redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
          protocol: TCP
