homework/5.kubernetes-network/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: gb4
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: gb4
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: my-redmine
  type: ClusterIP
